Changed bio paragraph

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       <td>
         <h1>Yashu Tiwari</h1>
         <p><em>Founder of <strong><a href="https://www.instagram.com/wakuwakubenkyo/?hl=en">WakuWaku Benkyo</a></strong>.</em></p>
-        <p>I am a Web Developer and Bilingual. I ❤ boba coffee and sip my classy wines.</p>
+        <p>I am a Web Developer and Bilingual.</p>
+        <p>I ❤ boba coffee and sip my classy wines.</p>
       </td>
     </tr>
   </table>
