--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Yashu's Personal Site</title>
 </head>
 
-<body>
+<body style="background-color: #D6E5FA;">
   <table cellspacing="20">
     <tr>
       <td><img src="images/yashu.png" alt="yashu profile picture"></td>
