--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
 <head>
   <meta charset="utf-8">
   <title>Yashu's Personal Site</title>
+  <style media="screen">
+    body {
+      background-color: #D6E5FA;
+    }
+
+    hr {
+      border-style: none;
+      border-top-style: dotted;
+      border-color: grey;
+      border-width: 5px;
+      width: 5%;
+    }
+  </style>
 </head>
 
-<body style="background-color: #D6E5FA;">
+<body>
   <table cellspacing="20">
     <tr>
       <td><img src="images/yashu.png" alt="yashu profile picture"></td>
